--- a/Index.html
+++ b/Index.html
@@ -6,27 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>About Me</title>
 
 </head>
 
 <body>
 
-    <h1>Jessica</h1>
-    <h2>Full Stack Developer</h2>
+    <h1>About Me</h1>
     <hr>
-
-        <p>Lorem ipsum <b>Bold</b>dolor sit amet consectetur adipisicing elit. Debitis esse sit, <i>Italic</i>asperiores tempore et pariatur<mark>marked</mark> harum sapiente, libero doloribus qui soluta labore, repudiandae<del>Deleted</del> porro dolore rem quam iste vero delectus?</p>
-
+    <h2>Jessica Morrison</h2>
     <br>
-    <hr>
-    <br>
-
     
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa excepturi suscipit dignissimos. Quasi ex nam rem modi mollitia ullam qui labore id natus laborum, in error! Beatae error suscipit illum.</p>
+        <p><b>Hello!</b> My name is Jessica.  I currently reside in <i>The Mile High</i> city of Denver, Colorado.  I am an online student at San Diego Global Knowledge University learning to be a <mark>Full Stack Developer</mark>. I chose this career path because technology is the way of the world today <ins>with endless possibilities</ins>. </p>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat numquam eveniet eos unde eligendi eius molestiae, nam excepturi consequatur aspernatur similique alias, libero facilis maiores blanditiis, dolor deserunt ratione sunt!</p>
+    <h3>My Mission</h3>
+
+        <p>I strive to always learn new knowledge and improve my skills to be a valuable <sub>developer</sub> in a world of technology that is constatly changing.</p>
+
+    <h4>My Vision</h4>
+
+        <p>My goal in this industry is to develop user-friendly web pages and applications that <sup>improve</sup> the user's experience to simplify the demands of everyday life.</p>
+
+    
 
 </body>
 </html>
